<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/device_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="arqrifa.org.arquitecturarifamobile.layout.DeviceListActivity"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/toolbar"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:id="@+id/textViewPaired"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_paired_devices" />

    <ListView
        android:id="@+id/PairedDevicesList"
        android:layout_width="match_parent"
        android:layout_height="290dp" />

    <TextView
        android:id="@+id/textViewOthers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_other_devices" />

    <ListView
        android:id="@+id/OtherDevicesList"
        android:layout_width="match_parent"
        android:layout_height="201dp" />

    <Button
        android:id="@+id/buttonBtSearch"
        style="@style/Button.Large"
        android:layout_width="match_parent"
        android:text="@string/search_button" />

</LinearLayout>